--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -363,6 +363,7 @@ The Sawallisch is terrible (see 7 or July/Aug
 A brilliant finale cannot compensate. The same goes for Previn: nothing goes anywhere until the finale; it all just sits there. I is totally misconceived (more on Previn below).
 
 Giulini has given us three 8ths. The one on DG was an abomination; the engineering was positively ugly---one of the ugliest discs I've ever heard. (Gramophone gave it an engineering prize---which goes to show how much their
+prizes are worth!). 
 It was the Chicago Symphony, and the violins sounded the way they did in Orchestra Hall before last year's renovation: all scratch and no tone. The EMI is much better,
 but the London Philharmonic could use some of the drive the Chicago Symphony had. They are often too refined, and their brass are too reticent. Still, for a mellow, bucolic, laid-back 8th, Giulini is worth investigating. Even the Sony is that way, but Giulini plays around with the tempo more than any other conductor---he wipes out the natural flow of the music. The Sony has very nice sound and the Concertgebouw Orchestra (Nov/Dec 1991).
 
@@ -447,7 +448,7 @@ the drama and excitement (maybe a little in the final climax)---a perfect specim
 Lawrence Hansen called the Pešek dubious and episodic---meandering and unfocussed---but had some kind words for Neumann, whom Mr Bauman also calls first-rate. The hushed beauty of II is a high point, but the whole performance is powerful, lovingly phrased, and tonally rich. This seems to apply to both the Supraphon and Denon performances (abour 10 years apart)---see Jan/Feb 1995. (Steven Haller didn't like the Neumann in Mar/Apr
 1987.) Another fine Czech conductor is Bělohlávek, and his thoughtful 9th belongs among the top 10 (also Jan/Feb 1995).
 
-Macal is very Czech (how did he get the staid old London Philharmonic to sound like that?) and downright thrilling in both sound and interpretation (Jan/Feb 1989---it was licensed to MHS at the time, but EMI has since brought it out [62006] and that may be available in some places). The sound walks a magic line between vivid and too close-up. The strings are not as rich as some. His later recording on Koss is not played quite as well and does not sound quite as good July/Aug 1991).
+Macal is very Czech (how did he get the staid old London Philharmonic to sound like that?) and downright thrilling in both sound and interpretation (Jan/Feb 1989---it was licensed to MHS at the time, but EMI has since brought it out [62006] and that may be available in some places). The sound walks a magic line between vivid and too close-up. The strings are not as rich as some. His later recording on Koss is not played quite as well and does not sound quite as good (July/Aug 1991).
 Another Czech recording is the Albrecht on Canyon (he, of course, is German). It is one of the fine recordings that don't quite make it into the very top tier (Nov/Dec 1997), and the label costs much more than full price. Karl Böhm is also Germanic---or Austrian, or better yet, Brahmsian---with very little temperament.
 Other perfectly adequate recordings were by Ormandy, Muti, Klemperer, Giulini, and Mehta. The Slatkin is beautifully played and
 recorded but barely scratches the emotional
