--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -551,6 +551,7 @@ Rafael Kubelik never recorded {\it Hero's Song}; but his account of the other fo
 
 Vaclav Neumann on Supraphon 0199 can be recommended as a quick-fix way of obtaining all four Erben-inspired pieces on one well-filled disc; while much of the atmosphere of the music still manages to come across, the recording is cramped and cavernous. Compared to Järvi and Kubelik, Zdenek Chalabala's vintage recordings are rather raw sounding---especially the winds, with plangent (occasionally shrill) brasses; but even such sonic shortcomings do not detract measurably from glorious performances that demonstrate a singing quality and flexibility of phrasing perhaps possible only with a conductor and ensemble (the Czech Philharmonic, of course) thoroughly familiar with the music. Chalabala was a wonderful interpreter of Dvořák and Smetana, and these
 are marvelously idiomatic performances. They were originally issued on Urania but are now on Supraphon 3056. The classic Talich recordings from 1949-51 are available on Supraphon---not the same as the 1954 concert performances of {\it Watersprite}, {\it Midday Witch} and {\it Wood Dove} on Panton (both good).
+
 Istvan Kertesz's superb London recordings of three of the tone poems have long been available only as Decca Ovation imports, the {\it Spinning Wheel} and {\it Watersprite} coupled with the {\it Scherzo Capriccioso} and {\it Othello Overture} on 425 060 and the {\it Midday Witch} coupled with the {\it Symphonic Variations}, {\it Hussites} and {\it Serenade for Winds} on 425 061. These have now been put together on a ``Double Decca'', replacing the {\it Wind Serenade} with three overtures: {\it Carnival}, {\it Nature's Realm}, and {\it My Home}.
 Watch for a US issue on London.
 
@@ -562,9 +563,9 @@ Inbal includes a strong and joyous {\it Wood Dove} with his Teldec set of sympho
 Carl Bauman was disappointed with Bělohlávek's {\it Spinning Wheel} on Chandos
 (9048), coupled with 8; he found it lacking in elegance next to Beecham, Talich, Kubelik, or Chalabala---the recording glassy and harsh.
 
-Mr Haller likes Peter Tiboris's account of {\it Watersprite} very much---at once broadly expressive and sharply characterized---though the remainder of the disc is a rather mixed bag (Elysium 701). The Editor considers both Bělohlávek's Watersprite and the Seventh Symphony coupled with it on Chandos 9391 as good as they get: excellent performances in superb sound. Koss (1010) has straitjacketed Zdenek Macal's Water Goblin in diffuse, gray sonics (but other reviewers like it). Naxos had Antoni Wit do it in combination with the Piano Concerto (550896)---no doubt as complement to Stephen Gunzenhauser's account of the other three noted above---and he did it well enough to get top marks from Vroon, who considers it the best there is at any price, gloriously played and recorded.
+Mr Haller likes Peter Tiboris's account of {\it Watersprite} very much---at once broadly expressive and sharply characterized---though the remainder of the disc is a rather mixed bag (Elysium 701). The Editor considers both Bělohlávek's {\it Watersprite} and the Seventh Symphony coupled with it on Chandos 9391 as good as they get: excellent performances in superb sound. Koss (1010) has straitjacketed Zdenek Macal's {\it Water Goblin} in diffuse, gray sonics (but other reviewers like it). Naxos had Antoni Wit do it in combination with the Piano Concerto (550896)---no doubt as complement to Stephen Gunzenhauser's account of the other three noted above---and he did it well enough to get top marks from Vroon, who considers it the best there is at any price, gloriously played and recorded.
 
-Mr Vroon had high praise for Bělohlávek's Wood Dove, as well as the accompanying Sixth Symphony (Chandos 9170); indeed he liked it even more than the Kubelik, praising Bělohlávek's expansive treatment of the main theme as well as the thrilling sound. Mr Vroon finds the Macal recording for Koss (1009) too hard-driven---``smooth but tense''---despite splendid sound.
+Mr Vroon had high praise for Bělohlávek's {\it Wood Dove}, as well as the accompanying Sixth Symphony (Chandos 9170); indeed he liked it even more than the Kubelik, praising Bělohlávek's expansive treatment of the main theme as well as the thrilling sound. Mr Vroon finds the Macal recording for Koss (1009) too hard-driven---``smooth but tense''---despite splendid sound.
 
 Haller had high praise for the Naxos CD of {\it Hero's Song} conducted by Antoni Wit, coupled with the Czech Suite, Hussites, and Festival March (553005); it's a gloriously festive performance with richly textured sound to match.
 
@@ -672,6 +673,7 @@ The Karajan was one of the first CDs, and apparently DG has never reissued it at
 Among records that couple the two serenades, Teldec's (St Paul/Hugh Wolff) has rather cool sound, with little ambience.
 
 The Granada Chamber Orchestra on Claves is very heartfelt and intense, and though they are not perfectly together all the time, they make such a nice sound that it's hard to resist. They join the  Dvořák with the Suk and Janacek equivalents, so you hear the development of the Czech string serenade.
+
 Naxos also gives us the Suk serenade with the  Dvořák; both are marvelous performances in gorgeous sound. The Editor is not alone in finding the Naxos the best available at any price. What a joy after Karajan!
 
 As we write this, EMI is about to release---for the first time on CD--the 1975 Stokowski.
@@ -695,7 +697,7 @@ Wolff & Teldec 97446 or 46315
 
 \section{Scherzo Capriccioso}
 
-The most exhilarating recording was certainly the Kempe, but it may be hard to find. The Karajan (from 1971, before he started to favor harsh sound) is also very exciting. Carl Bauman would add Kertesz (NA) and Bélohlavek (with his 5th).
+The most exhilarating recording was certainly the Kempe, but it may be hard to find. The Karajan (from 1971, before he started to favor harsh sound) is also very exciting. Carl Bauman would add Kertesz (NA) and Bělohlávek (with his 5th).
 
 \st
 Kempe & EMI 67357\\
@@ -710,6 +712,7 @@ These are 28 variations on his own theme—a song called `I am a Fiddler'. The f
 Then the real fun starts: in the next 13 variations (4-16) he plays with it much as a dog might play with its puppy, turning it on its back and rolling it all over the place, licking it affectionately and slapping it when it becomes too obstreperous (description in the Gervase Hughes book on  Dvořák). Variation 17 changes the time-signature, 18 changes the key, and 19
 introduces a waltz tune that hardly seems
 related to what has come before. That then becomes the basis for a subsidiary set of seven variations (20-26). Variation 27 brings us back to earth with the opening theme, and in Variation 28 it becomes a fugue---with a polka in the middle!  Dvořák was very happy with this work, and it showed the world what he was capable of. But while he was enjoying his compositional prowess he lost his last two children to disease.
+
 Our reviewer found the Järvi ``very good but perhaps not quite good enough to overcome the inherent ennui of this work'' J/F 1993). And that's the way most performances come across: you blame the music, because all seems well played. But you should always be suspicious in such circumstances; someday a conductor will come along who will make sense of the music and reveal it to be amazingly appealing. Recordings of 11 conductors are listed at the moment, and we don't like most of them. We were kindest to Sawallisch. But the one who reveals this piece for what it is is Macal: very Czech, with natural flow and plenty of vitality and simply gorgeous playing and sound.
 
 \st
@@ -719,11 +722,13 @@ Macal & Koss 1024
 \section{Violin Concerto}
 
 Why  Dvořák's lovely violin concerto is not as popular as Mendelssohn's or Tchaikovsky's is hard to explain. It has melody, and its music is stirring. It may not be enough of a display piece. Or the answer may simply be lack of familiarity. We are sure that if people were familiar with it they would like it. It has come into its own on CD, where there are now around 25 recordings, including Stern and Suk/Ančerl from LP days. (EMI also issued one of the two Milstein recordings in 1994---Mar/Apr Collections. A number of our writers liked Milstein in this work.) We did not like the Teldec Zehetmair, but that seems to be deleted now.
+
 On purely technical grounds, Kyung-Wha Chung hasn't found the Czech idiom, and in I she is bland, harsh, and exaggerated all at once. Her III is really dull---and that's not easy to accomplish. Muti's accompaniment is leaden. Mintz takes a funereal tempo in I, and his III is also pretty dull—not helped by James Levine. Accardo is better, but the accompaniment is again less than ideal. Midori has momentum, energy, and presence; she is always lively. Mehta is an expert accompanist, and Sony supplies great sound.
 
 Suk/Ančerl has long been recognized by most of us as the paradigm: this is how it
 should go. The Orfeo is a monaural radio broadcast; the Supraphon is the one to have.
 Suk also recorded it later (in 1978) with Neumann; the conducting is a little laid-back compared to Ančerl, but it's a fine recording and will return to the catalog someday. Tetzlaff and Neumann are very similar: ``seething with insight and tradition'', as John McKelvey puts it. Tetzlaff may not be the most colorful violinist around, but his intonation is secure and his musicianship hard to fault. He also plays with vigor and enthusiasm---and Virgin engineers do a great job with the sound. It was also John McKelvey who reviewed the Krebbers recording; that he liked it was no surprise to those of us who keep up on Concertgebouw concertmasters. It is not listed at the moment.
+
 There's nothing wrong with the Stern/Ormandy—though it is pretty old by now---but Uto Ughi and Leonard Slatkin had much the same sound and approach in their 1991 RCA recording (deleted?). II is simple and direct, never exaggerated or finicky, but certainly affectionate. III is exciting here—a real \emph{furiant}.
 
 \st
