--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -303,7 +303,6 @@ Suitner's 7 is forceful, with sharp attacks
 and little charm-sinewy and intense rather than graceful. Giulini on EMI is almost the other extreme: only mildly engaging, a run-through. (The Chicago Symphony has made available a far better Giulini 7th; see Nov/Dec 1996 and July/Aug 1994.) Giulini is a maddeningly inconsistent conductor. There was a Giulini on DG. It was better conducted than the EMI or Sony, but the sound was not great. The Sony Giulini (Concertgebouw) is very slow and ponderous, with no energy or pulse. Jansons has plenty of that, but he doesn't slow down for the appealing parts---goes flying right thru them---and III sounds half-hearted. Colin Davis is rather cold emotionally and gets rather cold sound, too. He achieves tremendous drive and clarity, but he refuses to linger over anything---and Dvořák gives us plenty to linger over.
 
 The Marriner seems perverse: he rushes thru all the big tunes and slows down where there is no reason to. II is breathless, and the Minnesota Orchestra is decidedly mediocre.
-Minnesota Orchestra is decidedly mediocre.
 The Maazel was odd and not very well shaped.
 John McKelvey was very impressed by the
 Mata 7th (M/J 1988)---a Germanic approach,
@@ -326,7 +325,7 @@ but it's a genial, well-inflected account.
 
 Zdenek Macal again delivers excitement---in spades---and Koss delivers gorgeous sound.
 II and III are the fastest around, and they sound driven.
-The music has been deprived of its natural flow, and this is an eccentric version--for people who like things fast. Another conductor who drives things too hard is Chung on BIS.
+The music has been deprived of its natural flow, and this is an eccentric version---for people who like things fast. Another conductor who drives things too hard is Chung on BIS.
 The Scherzo sounds more like Beethoven than Dvořák, and the orchestra is nowhere near as good as Milwaukee. James Levine's 7th also seems hard-driven: excitement at the expense of the music's emotional range. What Monteux had was both---along with a very nice sound from the London Symphony. There is no particular need for the Monteux with so many fine---and better-sounding---recordings on the market, but Steven Haller is not the only ARG reviewer who reveres it. Nor do we really need the 1963 Bernstein, just reissued. It is exciting and passionate, but so are many far better---played and---recorded ones (actually, the sound is vastly improved on CD). The Ormandy was better recorded (RCA), but Ormandy was not good at Dvořák.
 
 Andrew Davis does nothing with the music, and the sound is distant, cloudy, and screechy (all!). Another bad recording job is the EMI Sawallisch---but part of the problem is certainly the decline of the Philadelphia Orchestra: the violins are scrappy, scrawny, and tinny. There is no blend or warmth.
@@ -413,16 +412,19 @@ Berlin/Kubelik & DG or MHS set
 Not many pieces of music have been recorded as often as this one. And there
 are a lot of good recordings, too. After all, any full-time orchestra has 
 played it a lot and knows it well---and that is not true of the other symphonies.
+
 There are over 100 recordings of it available right now---many in numerous incarnations.
 There are eight listings for Neumann and six for Nanut, though they seem to represent
 five actual Neumann recordings and only one by Nanut. 
 Needless to say, a lot of recordings are out of the catalog, too.
+
 To help us narrow things down, we let the sound of the Toscanini, Keilberth,
 Tennstedt, and Fricsay rule them out. The Minnesota Orchestra has no tonal allure,
 so in spite of rather good conducting we cannot recommend Marriner.
 We expected more from Karajan and Horenstein: they are not very special.
 Mr Chakwin likes Horenstein's fire and energy,
 but most of us hear nothing that distinguishes his from other recordings. Chesky's reproduction is superb.
+
 Järvi is sodden and lead-footed. Dorati is not competitive anymore (May/June 1997).
 None of the Kubeliks are very good. The Denon (Czech Philharmonic) is sloppily played and badly balanced. The Berlin one is full of his usual tempo manipulations (Carl Bauman calls it ``flexibility'') and is played much better, but the sound reeks of artificial reverberation, and there's no warmth at all.
 The strings sound slightly metallic and have no body. Kubelik's approach is genial and pleasant but not stirring or moving.
@@ -530,6 +532,7 @@ Complete sets are a marketing ploy. There is no reason on earth why any musician
 Nor is it easy to find one who can resist temptation when asked to record them all!
 We do not recommend that you buy a complete set, but if you insist, you must also buy a few individual discs to make up for the weaknesses in the set. Kubelik's set dates from 1966-73 (No. 8 is the oldest, No. 1 the most recent). No. 3 is terrible, and No. 4 is noi among the best-and, naturally, there are better New Worlds and 7ths and 8ths (though those two are pretty good). As for the Kertesz set, there are better recordings of 1,7,8, and 9.
 Only a few of Järvi and Neumann rank among the best.
+
 [While I was working on the symphonies, Lawrence Hansen and Tom Godell spent a few days in Cincinnati, and we listened together.
 Many of the above observations are the results of our discussions.-Ed]
 
