--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -661,9 +661,9 @@ Macal & Koss 1002\\
 Pešek & Virgin 59522
 \et
 
-\section{String Serenade}
+\section{Serenade for Strings}
 
-The title and the music suggest a music: evening in an aristocratic drawing room. It courtly music---quite elegant---and only lets go a little in the final movement (of five). This is the earliest  Dvořák composition (1875) that almost any listener will be enchanted by. (I don't mean to detract from the early symphonies---I like them very much.)
+The title and the music suggest a musical evening in an aristocratic drawing room. It's courtly music---quite elegant---and only lets go a little in the final movement (of five). This is the earliest  Dvořák composition (1875) that almost any listener will be enchanted by. (I don't mean to detract from the early symphonies---I like them very much.)
 
 The Prague Chamber Orchestra (without conductor) slogs thru this with no spirit at all.
 The Prague Soloists are rather stiff and formal.
